--- a/public/css/style26.css
+++ b/public/css/style26.css
@@ -190,7 +190,7 @@ body{
     }
     .cont3{
         display: flex;
-    flex-direction: row;
+    flex-direction: column;
     width: 100%;
     height: 85%;
     background-color: #f6f6f6;
