--- a/public/css/style33.css
+++ b/public/css/style33.css
@@ -68,6 +68,37 @@
                 font-size: 3vh;
          
          }
+         .insert-title .insert-botones{
+display: flex;
+width: 25%;
+height: 100%;
+align-items: center;
+justify-content: center;
+
+
+
+         }
+         .insert-botones .boton-reporte{
+width: 50%;
+height: 50%;
+text-decoration: none;
+background-color: #6FC7D1;
+display: flex;
+text-align: center;
+justify-content: center;
+align-items: center;
+font-size: 1.25vw;
+font-family: hatton;
+color: black;
+border-radius: 2vw;
+transition: 0.5s;
+         }
+         .boton-reporte:hover{
+             transform: scale(1.1);
+background-color: #84ECF8;
+color: rgb(176, 63, 221);
+
+         }
            .maincontainer .container-tabla{
             width: 100%;
             height: 85%;
