--- a/public/css/style28.css
+++ b/public/css/style28.css
@@ -88,7 +88,36 @@
     font-size: 3vh;
 
 }
+.put-title .put-button{
+    width: 25%;
+    height: 100%;
+    display: flex;
+    align-items: center;
 
+}
+#boton-informe{
+
+margin-left: 15%;
+display: flex;
+justify-content: center;
+align-items: center;
+text-align: center;
+font-family: hatton;
+font-size: 0.78vw;
+width: 45%;
+height: 50%;
+background-color: lightgreen;
+border-radius: 2vw;
+border: solid rgb(113, 112, 112);
+transition: 0.5s;
+cursor: pointer;
+
+}
+#boton-informe:hover{
+background-color:rgb(113, 112, 112); ;
+
+
+}
 .cont3 .container-table {
     width: 100%;
     height: 85%;
