--- a/public/css/stylePdfProductos.css
+++ b/public/css/stylePdfProductos.css
@@ -547,3 +547,200 @@ display: flex;
 
 
         }
+        @media(orientation:portrait){
+            .tabla-container .titulos-container{
+                width: 97%;
+                height: 6vh;
+                display: flex;
+                margin-top: 2%;
+                color: white;
+                font-family: hatton;
+                border: solid 0.25vw var(--colorBordes);
+                }
+                .titulos-container .titulo-id{
+                    width: 5%;
+                    height: 100%;
+                    display: flex;
+                    text-align: center;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: var(--colorSubtitulos);
+                    font-size: 1.3vh;
+                    border-right: solid 0.25vw var(--colorBordes);
+                    overflow: hidden;
+                    
+                    }
+                    .titulos-container .titulo-dueño{
+                    width: 10%;
+                    height: 100%;
+                    display: flex;
+                    background-color: var(--colorSubtitulos);
+                    text-align: center;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 1.3vh;
+                    border-right: solid 0.25vw var(--colorBordes);
+                    overflow: hidden;
+                    }
+                    .titulos-container .telefono-dueño{
+                        width: 20%;
+                        height: 100%;
+                        display: flex;
+                        background-color: var(--colorSubtitulos);
+                        text-align: center;
+                        justify-content: center;
+                        align-items: center;
+                        font-size: 1.3vh;
+                        border-right: solid 0.25vw var(--colorBordes);
+                        overflow: hidden;
+                    }
+                    .titulos-container .nombre-mascota{
+                        width: 10%;
+                        height: 100%;
+                        display: flex;
+                        background-color: var(--colorSubtitulos);
+                        text-align: center;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 1.3vh;
+                    border-right: solid 0.25vw var(--colorBordes);
+                    overflow: hidden;
+                    }
+                    .titulos-container .edad-mascota{
+                        width: 10%;
+                        height: 100%;
+                        display: flex;
+                        background-color: var(--colorSubtitulos);
+                        text-align: center;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 1.3vh;
+                    border-right: solid 0.25vw var(--colorBordes);
+                    overflow: hidden;
+                    }
+                    .titulos-container .peso-mascota{
+                        width: 10%;
+                        height: 100%;
+                        display: flex;
+                        background-color: var(--colorSubtitulos);
+                        text-align: center;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 1.3vh;
+                    border-right: solid 0.25vw var(--colorBordes);
+                    overflow: hidden;
+                    }
+                    .titulos-container .tratamiento{
+                    width: 15%;
+                    height: 100%;
+                    display: flex;
+                    background-color: var(--colorSubtitulos);
+                    text-align: center;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 1.3vh;
+                    overflow: hidden;
+                    }
+                .tabla-container .info-container{
+
+                    width: 97%;
+                    height: 6vh;
+                    display: flex;
+                    border-bottom: solid 0.25vw var(--colorBordes);
+                   border-left:solid 0.25vw var(--colorBordes); ;
+                   border-right: solid 0.25vw var(--colorBordes);;
+                
+                
+                }
+                .info-container .titulo-id{
+                    width: 5%;
+                    height: 100%;
+                    display: flex;
+                    text-align: center;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: var(--colorInfo);
+                    font-size: 1.3vh;
+                    border-right: solid 0.25vw var(--colorBordes);
+                    overflow: hidden;
+                    
+                    }
+                    .info-container .titulo-dueño{
+                    width: 10%;
+                    height: 100%;
+                    display: flex;
+                    background-color: var(--colorInfo);
+                    text-align: center;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 1.3vh;
+                    border-right: solid 0.25vw var(--colorBordes);
+                    overflow: hidden;
+                    }
+                    .titulo-dueño .img-producto{
+            width: 60%;
+            height: 85%;
+            display: flex;
+            
+                    }
+                    .info-container .telefono-dueño{
+                        width: 20%;
+                        height: 100%;
+                        display: flex;
+                        background-color: var(--colorInfo);
+                        text-align: center;
+                        justify-content: center;
+                        align-items: center;
+                        font-size: 1.3vh;
+                        border-right: solid 0.25vw var(--colorBordes);
+                        overflow: hidden;
+                    }
+                    .info-container .nombre-mascota{
+                        width: 10%;
+                        height: 100%;
+                        display: flex;
+                        background-color: var(--colorInfo);
+                        text-align: center;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 1.3vh;
+                    border-right: solid 0.25vw var(--colorBordes);
+                    overflow: hidden;
+                    }
+                    .info-container .edad-mascota{
+                        width: 10%;
+                        height: 100%;
+                        display: flex;
+                        background-color: var(--colorInfo);
+                        text-align: center;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 1.3vh;
+                    border-right: solid 0.25vw var(--colorBordes);
+                    overflow: hidden;
+                    }
+                    .info-container .peso-mascota{
+                        width: 10%;
+                        height: 100%;
+                        display: flex;
+                        background-color: var(--colorInfo);
+                        text-align: center;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 1.3vh;
+                    border-right: solid 0.25vw var(--colorBordes);
+                    overflow: hidden;
+                    }
+                    .info-container .tratamiento{
+                    width: 15%;
+                    height: 100%;
+                    display: flex;
+                    background-color: var(--colorInfo);
+                    text-align: center;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 1.3vh;
+                    overflow: hidden;}
+
+
+        }
