--- a/public/css/style21.css
+++ b/public/css/style21.css
@@ -284,7 +284,7 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-size: 1.05vw;
             text-align: center;
             flex-wrap: wrap;
-            
+            overflow: hidden;
 
 
            }
