--- a/public/css/style69.css
+++ b/public/css/style69.css
@@ -25,6 +25,8 @@ body{
     height: 85%;
     display: flex;
   background-color: white;
+  justify-content: center;
+  align-items: center;
     border: solid 0.5vh #268ECD;
     border-radius: 1vw;
     
@@ -41,6 +43,27 @@ body{
     
     
     }
+    .container-image .cerrate{
+        width: 14%;
+        height: 14%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+position: relative;
+bottom: 2%;
+background-color: red;
+border: none;
+color: white;
+font-size: 1vw;
+transition: 0.4s;
+
+    }
+.cerrate:hover{
+background-color: white;
+color: red;
+font-size: 2vw;
+
+}
     .container-image .gif-perro{
     width: 80%;
     height: 60%;
@@ -50,10 +73,11 @@ body{
     }
     .alert-body .container-text{
         width: 60%;
-        height: 100%;
+        height: 90%;
         display: flex;
+        overflow: auto;
         flex-direction: column;
-        justify-content: space-around;
+      justify-content: space-between;
         text-align: center;
         font-family: hatton;
         font-size: 1vw;
@@ -63,8 +87,18 @@ body{
     
     }
     .mostrar{
+        
 opacity: 1;
 
 
+
+    }
+    .mostrar .cerrate{
+        pointer-events: auto;
+        cursor: pointer;
+
+    }
+    .mostrar .container-text{
+pointer-events: auto;
 
     }
