--- a/public/css/style33.css
+++ b/public/css/style33.css
@@ -76,22 +76,26 @@ align-items: center;
 justify-content: center;
 
 
-
          }
-         .insert-botones .boton-reporte{
-width: 50%;
-height: 50%;
-text-decoration: none;
-background-color: #6FC7D1;
+         .insert-botones .botones-container{
+width: 95%;
+height: 35%;
 display: flex;
-text-align: center;
-justify-content: center;
-align-items: center;
-font-size: 1.25vw;
-font-family: hatton;
-color: black;
-border-radius: 2vw;
-transition: 0.5s;
+         }
+         .botones-container .boton-reporte{
+              width: 33.3333333333%;
+              height: 100%;
+              display: flex;
+              background-color:#268CCA;
+              font-family: hatton;
+              font-size: 1vw;
+              color: white;
+              justify-content: center;
+              align-items: center;
+              text-align: center;
+              text-decoration: none;
+              transition: .5s;
+              border: solid 0.2vw black;
          }
          .boton-reporte:hover{
              transform: scale(1.1);
