--- a/public/css/style10.css
+++ b/public/css/style10.css
@@ -55,6 +55,7 @@ text-align: center;
     }
     .submenu .items-container{
 display: flex;
+flex-direction: column;
 justify-content: center;
 align-items: center;
 width: 100%;
@@ -64,12 +65,105 @@ height: 92%;
     }
    .items-container .item-container-carrito{
 display: flex;
+flex-direction: column;
 border-radius: 1.1vw;
 width: 84.5%;
-height: 93%;
+height: 75%;
 background-color: #9C928E;
 
    }
+.items-container .vaciar-carrito{
+    width: 84.5%;
+    height: 7%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    background-color: aqua;
+} 
+.item-container-carrito .card-to-purchase-container{
+display: flex;
+flex-direction: column;
+justify-content: start;
+align-items: center;
+width: 100%;
+height: 90%;
+background-color: beige;
+border-top-left-radius: 1.1vw;
+border-top-right-radius: 1.1vw;
+overflow-y:scroll
+}
+.card-to-purchase-container .tarjeta-carrito-container{
+width: 30vw;
+height:100px;
+margin-bottom: 5%;
+margin-top: 5%;
+display: flex;
+background-color:lightblue;
+
+}
+.tarjeta-carrito-container .mitad-img-cant{
+width: 30%;
+height: 100%;
+display: flex;
+flex-direction: column;
+justify-content: space-evenly;
+align-items: center;
+background-color: #14CE1B;
+
+}
+.mitad-img-cant .amound-items-z{
+    display: flex;
+    width: 70%;
+    height: 17%;
+}
+.amound-items-z .decrease-button-z{
+    display: flex;
+    width: 33.33%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    font-size: 2vh;
+    font-family: hatton;
+    background-color: #D9DBDC;
+    border: none;
+    color: white;
+    transition: 0.5s;
+}
+.amound-items-z .mostrar-cantidad-z{
+    display: flex;
+    width: 100%;
+    height: 80%;
+    text-align: center;
+    font-family: hatton;
+    font-size: 1.58vh;
+    border-top:0.2vh solid #D9DBDC;
+    border-bottom:0.2vh solid #D9DBDC;
+    border-left: none;
+    border-right: none;
+}
+.amound-items-z .increase-button-z{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 33.33%;
+    height: 100%;
+    font-size: 2vh;
+    font-family: hatton;
+    background-color: #01A6E0;
+    border: none;
+    color: white;
+    transition: 0.5s;
+       }
+       .increase-button-z:hover{
+        background-color: #14CE1B;
+
+       }
+.item-container-carrito .container-btns{
+    display: flex;
+    width: 100%;
+    height: 10%;
+    background-color: crimson;
+}
     .title .shop-car{
         position: relative;
         left: 12%;
