--- a/public/css/style25.css
+++ b/public/css/style25.css
@@ -77,4 +77,9 @@ body{
                         opacity: 1;
                         pointer-events: none;
                                        }
+                                       .mk{
+                                        opacity: 1;
+                                     display: none;
+                                                       }
+                                       
                        
