--- a/public/css/styleResetPassword.css
+++ b/public/css/styleResetPassword.css
@@ -70,6 +70,7 @@ align-items: center;
 text-align: center;
 font-size: 1.3vw;
 font-family: hatton;
+
 }
 .form .put-input{
 width:70%;
@@ -131,7 +132,7 @@ display: flex;
 
 }
 .reset-empleado .btn{
-display: flex;
+display: none;
 width: 100%;
 height: 100%;
 justify-content: center;
